--- a/Report1/bibio.bib
+++ b/Report1/bibio.bib
@@ -49,3 +49,9 @@
   howpublished = {\url{https://www.waze.com/}},
   note = {Accessed: 2016-03-01}
 }
+
+@misc{bluetooth,
+  title = {Bluetooth 5.0: Here’s Why The New Wireless Standard Matters},
+  howpublished = {\url{http://www.ibtimes.com/bluetooth-50-heres-why-new-wireless-standard-matters-2383305}},
+  note = {Accessed: 2016-03-01}
+}
